Fix sort arrow alignment for zoomed views. (#1053)

--- a/admin/themes/default/css/sass/components/_tables.scss
+++ b/admin/themes/default/css/sass/components/_tables.scss
@@ -69,7 +69,7 @@ th {
         content: none;
         opacity: 1;
         position: absolute;
-        top: 4px;
+        top: 3.5px;
         right: 0;
     }
 
