--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -1714,7 +1714,7 @@ th {
     content: none;
     opacity: 1;
     position: absolute;
-    top: 4px;
+    top: 3.5px;
     right: 0; }
   th a:link,
   th a:visited {
